@@ -152,6 +152,7 @@ where XXXXXX is the bug number as listed below.
 373555  Rename BBPTR to GSPTR as it denotes guest state pointer only
 373938  const IRExpr arguments for matchIRExpr()
 374719  some spelling fixes
+374963  increase valgrind's load address to prevent mmap failure
 375514  valgrind_get_tls_addr() does not work in case of static TLS
 375772  +1 error in get_elf_symbol_info() when computing value of 'hi' address
         for ML_(find_rx_mapping)()
